--- a/hello.html
+++ b/hello.html
@@ -17,6 +17,11 @@
 		<div>
 			Bienvenue dans cette formation GIT !
 		</div>
+		<!-- description -->
+	    <div>
+			<h1> Ma description </h1>
+			<p>Bonjour, Je m'appelle Anthony je suis informaticien</p>
+	    </div>
 		
 	
 </body></html>
