ajout des titres

--- a/hello.html
+++ b/hello.html
@@ -22,6 +22,10 @@
 			<h1> Ma description </h1>
 			<p>Bonjour, Je m'appelle Anthony je suis informaticien</p>
 	    </div>
-		
+		<!-- récompense -->
+	    <div>
+			<h1> Mes récompenses </h1>
+			<p>En construction ...</p>
+	    </div>
 	
 </body></html>
